--- a/TravelBooking/theme/templates/product_detail.html
+++ b/TravelBooking/theme/templates/product_detail.html
@@ -21,11 +21,12 @@
                 {% endif %}
             </div>
         </div>
+        
 
         <div class="bg-white p-6 rounded-lg shadow-md grid grid-cols-1 md:grid-cols-2 gap-8">
             <div>
                 <div class="bg-gray-100 p-6 rounded-lg shadow-md">
-                    <h2 class="text-3xl font-semibold mb-4">Product Details</h2>
+                    <h2 class="text-3xl font-semibold mb-4">Package Details</h2>
                     <div class="mb-4">
                         <p class="text-gray-700">{{ product.description }}</p>
                     </div>
