--- a/TravelBooking/theme/templates/search_results.html
+++ b/TravelBooking/theme/templates/search_results.html
@@ -21,12 +21,11 @@
         <div class="container mx-auto mt-16 flex justify-center">
             <div class="relative">
                 <form id="searchForm" class="flex" method="GET" action="{% url 'search_results' %}">
-                    <input id="searchInput" type="search" name="q" placeholder="What would you like to experience?" class="bg-white bg-opacity-75 h-12 px-6 pr-10 rounded-full text-sm w-96 focus:outline-none border border-gray-300 text-gray-800 placeholder-gray-800 shadow-md">
+                    <input id="searchInput" type="search" name="q" placeholder="What would you like to experience?" class="bg-white   bg-opacity-75 h-12 px-6 pr-10 rounded-full text-sm w-96 focus:outline-none border border-gray-300 text-gray-800 placeholder-gray-800 shadow-md">
                     <button id="searchButton" type="submit" class="absolute inset-y-0 right-0 flex items-center justify-center bg-blue-500 text-white rounded-full px-4 py-2 ml-2 hover:bg-blue-600 focus:outline-none">
-                        <svg class="h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 15l4-4m0 0l-4-4m4 4H4m15 4v-7a3 3 0 00-3-3H6a3 3 0 00-3 3v7a3 3 0 003 3h10a3 3 0 003-3z"></path>
-                        </svg>
+                        <i class="fas fa-search"></i> <!-- Font Awesome search icon -->
                     </button>
+                    
                 </form>
             </div>
         </div>
@@ -41,7 +40,7 @@
                 <div class="relative bg-white rounded-lg shadow-md overflow-hidden">
                     <!-- Discount Badge -->
                     {% if product.get_percentage > 0 %}
-                        <div class="absolute top-0 left-0 bg-green-600 text-white py-1 px-2 rounded-t-lg shadow-md">
+                        <div class="absolute top-0 left-0 bg-blue-500 text-white py-1 px-2 rounded-t-lg shadow-md">
                             <span class="text-xs font-semibold">-{{ product.get_percentage|default:"0"|floatformat:0 }}%</span>
                         </div>
                     {% endif %}
@@ -65,7 +64,7 @@
                         </div>
                         
                         <!-- Book Now Button -->
-                        <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block">Book Now</a>
+                        <a href="{% url 'product_detail' product.pid %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block">Read More</a>
                     </div>
                 </div>
             {% endfor %}
