--- a/TravelBooking/theme/templates/edit_profile.html
+++ b/TravelBooking/theme/templates/edit_profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static tailwind_tags %}
 {% block title %}
-    <title>Edit Profile</title>
+    Edit Profile
 {% endblock %}
 {% tailwind_css %}
 
