--- a/TravelBooking/theme/templates/change_password.html
+++ b/TravelBooking/theme/templates/change_password.html
@@ -39,7 +39,11 @@
             </div>
             <div class="flex justify-between items-center">
                 <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white px-6 py-3 rounded">Change Password</button>
-                <a href="{% url 'settings' %}" class="inline-block bg-gray-300 hover:bg-gray-400 text-gray-800 px-6 py-3 rounded">Cancel</a>
+                {% if is_vendor %}
+                    <a href="{% url 'vendor_settings' %}" class="inline-block bg-gray-300 hover:bg-gray-400 text-gray-800 px-6 py-3 rounded">Cancel</a>
+                {% else %}
+                    <a href="{% url 'settings' %}" class="inline-block bg-gray-300 hover:bg-gray-400 text-gray-800 px-6 py-3 rounded">Cancel</a>
+                {% endif %}
             </div>
         </form>
     </div>
