--- a/TravelBooking/theme/templates/index.html
+++ b/TravelBooking/theme/templates/index.html
@@ -49,6 +49,23 @@
             </div>
         </div>
     </div>
+    <div class="container mx-auto px-4 mt-12">
+        <div class="text-center">
+            <h2 class="text-3xl font-semibold mb-8">Discover by Category</h2>
+        </div>
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+            {% for category in categories %}
+            <div class="bg-white shadow-md rounded-lg overflow-hidden transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-105">
+                <img src="{{ category.image.url }}" alt="{{ category.title }}" class="h-48 w-full object-cover rounded-t-lg">
+                <div class="p-6">
+                    <h2 class="text-xl font-semibold mb-2">{{ category.title }}</h2>
+                    <p class="text-gray-700 mb-4">{{ category.description }}</p>
+                    <a href="{% url 'filtered_product_list' category_id=category.id %}" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded inline-block">Explore</a>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
     
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
         {% for product in products %}
