--- a/TravelBooking/theme/templates/login.html
+++ b/TravelBooking/theme/templates/login.html
@@ -46,6 +46,8 @@
                     {% endfor %}
                 </div>
             </form>
+            <a href="{% url 'forgot_password' %}" class="text-sm text-indigo-600 hover:text-indigo-800 ">Forgot password?</a>
+
             <div class="flex justify-center mt-6">
                 <p class="text-sm text-gray-600">Don't have an account? <a href="{% url 'register' %}" class="font-medium text-indigo-600 hover:text-indigo-800">Sign Up</a></p>
             </div>
