--- a/TravelBooking/theme/templates/product_list.html
+++ b/TravelBooking/theme/templates/product_list.html
@@ -13,7 +13,7 @@
 <!-- Search Bar Section -->
 <div class="bg-cover bg-center bg-blue-500 text-white py-24" style="background-image: url('/static/images/bg1.jpeg');background-position: top;">
     <div class="container mx-auto px-6 text-center">
-        <h1 class="text-6xl font-bold">Welcome to Adven</h1>
+        <h1 class="text-6xl font-bold">Destinations</h1>
         <p class="mt-4 text-2xl">Experience Nepal with us!</p>
         <div class="container mx-auto mt-16 flex justify-center">
             <div class="relative">
