--- a/TravelBooking/theme/templates/vendor_register.html
+++ b/TravelBooking/theme/templates/vendor_register.html
@@ -13,9 +13,21 @@
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
 </head>
 <body class="bg-gradient-to-r from-blue-400 to-indigo-600 min-h-screen flex items-center justify-center">
+    
     <form action="{% url 'register' %}" method="post" enctype="multipart/form-data" class="max-w-md w-full px-6 py-8 bg-white rounded-lg shadow-lg">
+        <div class="flex items-center justify-center mb-8">
+            <a href="{% url 'index' %}" class="flex items-center text-gray-800 hover:text-gray-900">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-500 mr-2" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M1 15.5c1.333-2 2-3.5 4-4.5s3-1.5 5-2.5c2-1 3.667-1.333 5-2.5 1.333-1.167 2-2.5 2-3.5s-0.667-2.5-2-3.5c-1.333-1-3-1.333-5-2.5C9 0.5 7.333 0 5 0c-1.333 0-2.333 0.5-3 1.5C1.333 3 1 4 1 5.5s0.667 2.5 2 3.5c1.333 1 2.667 1.333 4 2.5s2.667 2 4 4.5c1.333 2.5 2 4 2 6s-0.667 2.5-2 4c-1.333 1.5-2.667 2-4 3s-2.667 1-4 1s-2.667-0.5-4-1s-2.667-1.5-4-1c-1.333-0.5-2-1.5-2-3.5s0.667-3.5 2-6zM18.5 20c1-1.5 1.5-3 1.5-5s-0.5-3.5-1.5-5c-1-1.5-2.5-2.5-4-3.5c-1.5-1-3-1.5-4.5-2.5c-1.5-1-2.5-2-3.5-3.5s-1.5-3-1.5-5.5z" clip-rule="evenodd"/>
+                </svg>
+                <span class="text-xl font-semibold mr-10">Adven</span>
+                <span class="text-gray-900" id="greeting"></span> 
+            </a>
+        </div>
         {% csrf_token %}
-        <h2 class="text-2xl font-semibold mb-6">Vendor Sign Up</h2>
+        <div class="flex justify-center">
+        <h2 class="text-2xl font-semibold mb-6 ">Vendor Sign Up</h2>
+        </div>
         <div class="mt-4 text-red-500">
             {% for message in messages %}
                 <p>{{ message }}</p>
@@ -55,7 +67,7 @@
             <label for="pan_card">Upload PAN Card Image:</label>
             <input type="file" name="pan_card" id="pan_card" accept="image/*" required>
         </div>
-        <button type="submit" class="w-full py-2 px-4 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 focus:outline-none focus:bg-indigo-700">Submit</button>
+        <button type="submit" class="w-full py-2 px-4 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 focus:outline-none focus:bg-indigo-700">Sign Up</button>
         <p class="mt-4 text-sm text-center">Already have an account? <a href="{% url 'login' %}" class="text-indigo-600 hover:text-indigo-900">Login</a></p>
         
     </form>
