--- a/TravelBooking/theme/templates/vendor_add_product.html
+++ b/TravelBooking/theme/templates/vendor_add_product.html
@@ -94,6 +94,10 @@
                     {{ form.old_price }}
                 </div>
                 <div class="mb-4">
+                    <label for="sku" class="block text-gray-700 font-bold mb-2">SKU </label>
+                    {{ form.sku }}
+                </div>
+                <div class="mb-4">
                     <label for="is_available" class="block text-gray-700 font-bold mb-2">Is Available</label>
                     {{ form.is_available }}
                 </div>
