--- a/TravelBooking/theme/templates/vendor_edit_product.html
+++ b/TravelBooking/theme/templates/vendor_edit_product.html
@@ -91,11 +91,21 @@
                     {{ form.old_price }}
                 </div>
                 <div class="mb-4">
+                    <label for="sku" class="block text-gray-700 font-bold mb-2">SKU </label>
+                    {{ form.sku }}
+                </div>
+                <div class="mb-4">
                     <label for="is_available" class="block text-gray-700 font-bold mb-2">Is Available</label>
                     {{ form.is_available }}
                 </div>
                 <!-- Multiple image upload fields -->
-                
+                <div class="mb-4">
+                    <label for="images" class="block text-gray-700 font-bold mb-2">Images</label>
+                    {{ formset.management_form }}
+                    {% for image_form in formset %}
+                        {{ image_form.images }}
+                    {% endfor %}
+                </div>
                 <button type="submit" class="py-2 px-4 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 focus:outline-none focus:bg-indigo-700">Update Product</button>
             </form>
         </div>
