--- a/TravelBooking/theme/templates/vendor_edit_profile.html
+++ b/TravelBooking/theme/templates/vendor_edit_profile.html
@@ -21,10 +21,10 @@
         </div>
         <ul class="py-4">
             <li>
-                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Products</a>
+                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Destination</a>
             </li>
             <li>
-                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Add Product</a>
+                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Add Destination</a>
             </li>
             <li>
                 <a href="{% url 'vendor_settings' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Settings</a>
