--- a/TravelBooking/theme/templates/booking_details.html
+++ b/TravelBooking/theme/templates/booking_details.html
@@ -18,8 +18,15 @@
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4 p-4">
         <div class="order-2 md:order-1">
           <p class="font-semibold text-gray-700">Total Cost:</p>
-          <p class="text-gray-600">Rs. {{ total_price }}</p>
-        </div>
+          {% if num_guests > 4 %}
+              <p class="text-gray-600">Rs. {{ total_price }}</p>
+              <p class="text-gray-600 text-xs">*10% Discount Applied</p>
+              
+          {% else %}
+              <p class="text-gray-600">Rs. {{ total_price }}</p>
+          {% endif %}
+      </div>
+      
         <!-- Date -->
         <div class="order-2 md:order-1">
           <p class="font-semibold text-gray-700">Date:</p>
@@ -109,6 +116,7 @@
         </div>
       </div>
       <div class="hidden">
+        
         <input
           type="text"
           id="amount"
