--- a/TravelBooking/theme/templates/vendor_edit_product.html
+++ b/TravelBooking/theme/templates/vendor_edit_product.html
@@ -28,10 +28,10 @@
         </div>
         <ul class="py-4">
             <li>
-                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Products</a>
+                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Destination</a>
             </li>
             <li>
-                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Add Product</a>
+                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Add Destination</a>
             </li>
             <li>
                 <a href="{% url 'vendor_settings' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Settings</a>
@@ -106,7 +106,7 @@
                         {{ image_form.images }}
                     {% endfor %}
                 </div>
-                <button type="submit" class="py-2 px-4 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 focus:outline-none focus:bg-indigo-700">Update Product</button>
+                <button type="submit" class="py-2 px-4 bg-indigo-600 text-white rounded-md hover:bg-indigo-700 focus:outline-none focus:bg-indigo-700">Update Destination</button>
             </form>
         </div>
     </div>
