--- a/TravelBooking/theme/templates/vendor_products.html
+++ b/TravelBooking/theme/templates/vendor_products.html
@@ -25,10 +25,10 @@
         </div>
         <ul class="py-4">
             <li>
-                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Products</a>
+                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Destination</a>
             </li>
             <li>
-                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Add Product</a>
+                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Add Destination</a>
             </li>
             <li>
                 <a href="{% url 'vendor_settings' %}" class="block py-2 px-4 text-sm hover:bg-gray-600">Settings</a>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="w-3/4 p-4">
                     <h2 class="text-lg font-semibold mb-2">{{ product.title }}</h2>
-                    <p class="text-gray-600 mb-2">Price: ${{ product.price }}</p>
+                    <p class="text-gray-600 mb-2">Price: Rs.{{ product.price }}</p>
                     <p class="text-gray-600 mb-2">Status: {{ product.product_status }}</p>
                     <div class="flex justify-between">
                         <a href="{% url 'edit_product' product_id=product.id %}" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Edit</a>
