--- a/TravelBooking/theme/templates/product_detail.html
+++ b/TravelBooking/theme/templates/product_detail.html
@@ -65,7 +65,7 @@ Destinations
         <div class = 'text-gray-600'>
           <p style="text-decoration: line-through ;">Original Price: <span style="text-decoration: line-through;">{{ product.old_price }}</span></p>
 
-          <p class="text-red-500">Discount: <span>{{ product.get_percentage|default:"0"|floatformat:0 }}%</span></p>
+          <p class="text-green-700">Discount: <span>{{ product.get_percentage|default:"0"|floatformat:0 }}%</span></p>
         </div>
 
       </div>
