--- a/TravelBooking/theme/templates/edit_profile.html
+++ b/TravelBooking/theme/templates/edit_profile.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="mb-4">
                     <label for="id_email" class="block text-sm font-semibold">Email</label>
-                    <input type="email" id="id_email" name="email" value="{{ user.email }}" class="w-full border rounded px-3 py-2">
+                    <input type="email" id="id_email" name="email" value="{{ user.email }}" class="w-full border rounded px-3 py-2" readonly>
                 </div>
                 <div class="mb-4">
                     <label for="id_username" class="block text-sm font-semibold">Username</label>
