--- a/TravelBooking/theme/templates/my_bookings.html
+++ b/TravelBooking/theme/templates/my_bookings.html
@@ -1,13 +1,9 @@
-
-
 {% extends 'base.html' %}
 
 {% block content %}
 
 <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 mt-6">
-  <div
-    class="flex justify-between items-center border-b-2 border-gray-200 py-2"
-  >
+  <div class="flex justify-between items-center border-b-2 border-gray-200 py-2">
     <h2 class="text-2xl font-semibold text-gray-900">My Bookings</h2>
   </div>
 
@@ -16,21 +12,27 @@
     <ul>
       {% for booking in bookings %}
       <li class="bg-white shadow overflow-hidden rounded-md px-6 py-4 mb-4">
-        <h3 class="text-lg leading-6 font-medium text-gray-900">
+        <h3 class="text-lg leading-6 font-medium text-gray-900 mb-2">
           Booking ID: {{ booking.id }} - {{ booking.product.title }}
         </h3>
-
-        <p class="mt-1 max-w-2xl text-sm text-gray-500">
-          Date: {{ booking.check_in_date }}
-        </p>
-        <p class="mt-1 max-w-2xl text-sm text-gray-500">
-          Payment Status:
-          <span
-            class="text-sm font-semibold {% if booking.transaction_status == 'Completed' %} text-green-500 {% else %} text-red-500 {% endif %}"
-          >
-            {{ booking.transaction_status }}
-          </span>
-        </p>
+        
+        <div class="space-y-1 text-sm text-gray-500">
+          <p>
+            <span class="font-semibold text-gray-700">Date:</span> {{ booking.check_in_date }}
+          </p>
+          <p>
+            <span class="font-semibold text-gray-700">Payment Status:</span>
+            <span class="font-semibold {% if booking.transaction_status == 'Completed' %} text-green-500 {% else %} text-red-500 {% endif %}">
+              {{ booking.transaction_status }}
+            </span>
+          </p>
+          <p>
+            <span class="font-semibold text-gray-700">Total Price:</span> Rs. {{ booking.total_price|default:"0"|floatformat:0 }}
+          </p>
+          <p>
+            <span class="font-semibold text-gray-700">Number of Guests:</span> {{ booking.num_guests }}
+          </p>
+        </div>
       </li>
       {% endfor %}
     </ul>
