--- a/TravelBooking/theme/templates/product_list.html
+++ b/TravelBooking/theme/templates/product_list.html
@@ -49,6 +49,9 @@
         </div>
     </div>
 </div>
+{% if selected_category %}
+<div class="text-center mt-4 font-semibold text-lg">Results for {{ selected_category }}</div>
+{% endif %}
 
 
 
