--- a/TravelBooking/theme/templates/vendor_dashboard.html
+++ b/TravelBooking/theme/templates/vendor_dashboard.html
@@ -1,4 +1,3 @@
-<!-- vendor_dashboard.html -->
 {% load static tailwind_tags %}
 {% tailwind_css %}
 <!DOCTYPE html>
@@ -12,35 +11,50 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
     <!-- Default theme -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
 </head>
 <body class="bg-gray-100 min-h-screen">
     <!-- Sidebar -->
-    <div class="bg-gray-700 text-white h-full w-64 fixed left-0 top-0 overflow-y-auto">
-        <div class="flex items-center justify-between hover:text-gray-900">
-            <a href="{% url 'vendor_dashboard' %}" class="flex items-center text-blue-500 mt-2 ml-4 ">
+    <div class="bg-gray-800 text-white h-full w-64 fixed left-0 top-0 overflow-y-auto">
+        <div class="flex items-center justify-between p-4">
+            <a href="{% url 'vendor_dashboard' %}" class="flex items-center text-blue-500">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-500 mr-2" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M1 15.5c1.333-2 2-3.5 4-4.5s3-1.5 5-2.5c2-1 3.667-1.333 5-2.5 1.333-1.167 2-2.5 2-3.5s-0.667-2.5-2-3.5c-1.333-1-3-1.333-5-2.5C9 0.5 7.333 0 5 0c-1.333 0-2.333 0.5-3 1.5C1.333 3 1 4 1 5.5s0.667 2.5 2 3.5c1.333 1 2.667 1.333 4 2.5s2.667 2 4 4.5c1.333 2.5 2 4 2 6s-0.667 2.5-2 4c-1.333 1.5-2.667 2-4 3s-2.667 1-4 1s-2.667-0.5-4-1s-2.667-1.5-4-1c-1.333-0.5-2-1.5-2-3.5s0.667-3.5 2-6zM18.5 20c1-1.5 1.5-3 1.5-5s-0.5-3.5-1.5-5c-1-1.5-2.5-2.5-4-3.5c-1.5-1-3-1.5-4.5-2.5c-1.5-1-2.5-2-3.5-3.5s-1.5-3-1.5-5.5z" clip-rule="evenodd"/>
                 </svg>
-                <span class="text-xl font-semibold mr-2">Adven</span>
+                <span class="text-xl font-semibold">Adven</span>
             </a>
-            <span class="text-gray-900" id="greeting"></span>
         </div>
         
         <ul class="py-4">
             <li>
-                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Destination</a>
+                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-map-marked-alt mr-2"></i>Destination
+                </a>
             </li>
             <li>
-                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Add Destination</a>
+                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-plus-circle mr-2"></i>Add Destination
+                </a>
             </li>
             <li>
-                <a href="{% url 'vendor_settings' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Settings</a>
+                <a href="{% url 'vendor_booking' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-calendar-check mr-2"></i>Bookings
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'vendor_settings' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-cog mr-2"></i>Settings
+                </a>
             </li>
         </ul>
         <div class="absolute bottom-0 p-4">
-            <a href="{% url 'logout' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Logout</a>
+            <a href="{% url 'logout' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                <i class="fas fa-sign-out-alt mr-2"></i>Logout
+            </a>
         </div>
     </div>
+    
     <!-- Content -->
     <div class="ml-64">
         <nav class="bg-white shadow-md">
@@ -51,22 +65,59 @@
             </div>
         </nav>
         <div class="max-w-7xl mx-auto px-4 py-8">
-            <!-- Your content here -->
-            <div class="max-w-7xl mx-auto px-4 py-8">
-                <div class="flex justify-between">
-                    <div class="w-1/2 bg-white rounded-lg shadow-md p-6">
-                        <h2 class="text-xl font-semibold mb-4">Products Added</h2>
-                        <p class="text-gray-700 text-lg">{{ num_products }}</p>
-                    </div>
-                    <div class="w-1/2 bg-white rounded-lg shadow-md p-6">
-                        <h2 class="text-xl font-semibold mb-4">Bookings Received</h2>
-                        <p class="text-gray-700 text-lg">{{ num_bookings }}</p>
-                    </div>
+            <!-- Main statistics -->
+            <div class="flex justify-between space-x-4">
+                <div class="w-1/3 bg-white rounded-lg shadow-md p-6">
+                    <h2 class="text-xl font-semibold mb-4 flex items-center">
+                        <i class="fas fa-box-open text-blue-500 mr-2"></i>Products Added
+                    </h2>
+                    <p class="text-gray-700 text-lg">{{ num_products }}</p>
                 </div>
-                
-                <!-- Chart -->
-                <div class="mt-8">
-                    <canvas id="myChart"></canvas>
+                <div class="w-1/3 bg-white rounded-lg shadow-md p-6">
+                    <h2 class="text-xl font-semibold mb-4 flex items-center">
+                        <i class="fas fa-calendar-alt text-green-500 mr-2"></i>Bookings Received
+                    </h2>
+                    <p class="text-gray-700 text-lg">{{ num_bookings }}</p>
+                </div>
+                <div class="w-1/3 bg-white rounded-lg shadow-md p-6">
+                    <h2 class="text-xl font-semibold mb-4 flex items-center">
+                        <i class="fas fa-dollar-sign text-yellow-500 mr-2"></i>Total Earnings
+                    </h2>
+                    <p class="text-gray-700 text-lg">Rs. {{ total_earnings|default:"0"|floatformat:2 }}</p>
+                </div>
+            </div>
+
+            <!-- Charts and graphs -->
+            <div class="mt-8">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+                    <div class="bg-white rounded-lg shadow-md p-6">
+                        <h2 class="text-xl font-semibold mb-4">Sales Overview</h2>
+                        <canvas id="combinedChart"></canvas>
+                    </div>
+                    
+                    <div class="bg-white rounded-lg shadow-lg p-6">
+                        <h2 class="text-2xl font-semibold mb-4">Recent Bookings</h2>
+                        {% if bookings %}
+                            <div class="grid grid-cols-1 gap-4">
+                                {% for booking in bookings %}
+                                    <div onclick="window.location.href='{% url 'vendor_booking' %}'" class="p-4 bg-gray-100 rounded-lg shadow transition duration-300 hover:bg-gray-200 cursor-pointer">
+                                        <div class="flex justify-between items-center">
+                                            <div>
+                                                <p class="text-gray-900 font-semibold">{{ booking.product.title }}</p>
+                                                <p class="text-gray-800 font-medium">Booking by {{ booking.user.get_full_name }}</p>
+                                            </div>
+                                            <div class="text-right">
+                                                <p class="text-gray-900 font-semibold">Price: Rs. {{ booking.total_price|default:"0"|floatformat:2 }}</p>
+                                                <p class="text-gray-700">{{ booking.check_in_date }}</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            <p class="text-gray-500">No recent bookings found.</p>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
         </div>
@@ -74,42 +125,39 @@
     <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
     {% for flashmsg in messages %}
     <script>
-    
         alertify.set('notifier','position', 'top-right');
         alertify.success('{{ flashmsg }}');
-    
     </script>
     {% endfor %}
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-    // Chart data
-    var ctx = document.getElementById('myChart').getContext('2d');
-    var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ['Products Added', 'Bookings Received'],
-            datasets: [{
-                label: 'Data',
-                data: [{{ num_products }}, {{ num_bookings }}],
-                backgroundColor: [
-                    'rgba(255, 99, 132, 0.2)',
-                    'rgba(54, 162, 235, 0.2)'
-                ],
-                borderColor: [
-                    'rgba(255, 99, 132, 1)',
-                    'rgba(54, 162, 235, 1)'
-                ],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                y: {
-                    beginAtZero: true
+    <script>
+        var combinedCtx = document.getElementById('combinedChart').getContext('2d');
+        var combinedChart = new Chart(combinedCtx, {
+            type: 'bar',
+            data: {
+                labels: ['Products', 'Bookings'],
+                datasets: [{
+                    label: 'Number of Products',
+                    data: [{% if num_products %}{{ num_products }}{% else %}0{% endif %}, 0],
+                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                    borderColor: 'rgba(54, 162, 235, 1)',
+                    borderWidth: 1
+                }, {
+                    label: 'Number of Bookings',
+                    data: [0, {% if num_bookings %}{{ num_bookings }}{% else %}0{% endif %}],
+                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                    borderColor: 'rgba(75, 192, 192, 1)',
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
                 }
             }
-        }
-    });
-</script>
+        });
+    </script>
 </body>
 </html>
