--- a/TravelBooking/theme/templates/vendor_edit_product.html
+++ b/TravelBooking/theme/templates/vendor_edit_product.html
@@ -13,32 +13,46 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
     <!-- Default theme -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
 </head>
 <body class="bg-gray-100 min-h-screen">
     <!-- Sidebar -->
-    <div class="bg-gray-700 text-white h-full w-64 fixed left-0 top-0 overflow-y-auto">
-        <div class="flex items-center justify-between hover:text-gray-900">
-            <a href="{% url 'vendor_dashboard' %}" class="flex items-center text-blue-500 mt-2 ml-4 ">
+    <div class="bg-gray-800 text-white h-full w-64 fixed left-0 top-0 overflow-y-auto">
+        <div class="flex items-center justify-between p-4">
+            <a href="{% url 'vendor_dashboard' %}" class="flex items-center text-blue-500">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-500 mr-2" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                     <path fill-rule="evenodd" d="M1 15.5c1.333-2 2-3.5 4-4.5s3-1.5 5-2.5c2-1 3.667-1.333 5-2.5 1.333-1.167 2-2.5 2-3.5s-0.667-2.5-2-3.5c-1.333-1-3-1.333-5-2.5C9 0.5 7.333 0 5 0c-1.333 0-2.333 0.5-3 1.5C1.333 3 1 4 1 5.5s0.667 2.5 2 3.5c1.333 1 2.667 1.333 4 2.5s2.667 2 4 4.5c1.333 2.5 2 4 2 6s-0.667 2.5-2 4c-1.333 1.5-2.667 2-4 3s-2.667 1-4 1s-2.667-0.5-4-1s-2.667-1.5-4-1c-1.333-0.5-2-1.5-2-3.5s0.667-3.5 2-6zM18.5 20c1-1.5 1.5-3 1.5-5s-0.5-3.5-1.5-5c-1-1.5-2.5-2.5-4-3.5c-1.5-1-3-1.5-4.5-2.5c-1.5-1-2.5-2-3.5-3.5s-1.5-3-1.5-5.5z" clip-rule="evenodd"/>
                 </svg>
-                <span class="text-xl font-semibold mr-2">Adven</span>
+                <span class="text-xl font-semibold">Adven</span>
             </a>
-            <span class="text-gray-900" id="greeting"></span>
         </div>
+        
         <ul class="py-4">
             <li>
-                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Destination</a>
+                <a href="{% url 'vendor_products' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-map-marked-alt mr-2"></i>Destination
+                </a>
             </li>
             <li>
-                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Add Destination</a>
+                <a href="{% url 'add_product' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-plus-circle mr-2"></i>Add Destination
+                </a>
             </li>
             <li>
-                <a href="{% url 'vendor_settings' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Settings</a>
+                <a href="{% url 'vendor_booking' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-calendar-check mr-2"></i>Bookings
+                </a>
+            </li>
+            <li>
+                <a href="{% url 'vendor_settings' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                    <i class="fas fa-cog mr-2"></i>Settings
+                </a>
             </li>
         </ul>
         <div class="absolute bottom-0 p-4">
-            <a href="{% url 'logout' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">Logout</a>
+            <a href="{% url 'logout' %}" class="block py-2 px-4 text-sm hover:bg-gray-700">
+                <i class="fas fa-sign-out-alt mr-2"></i>Logout
+            </a>
         </div>
     </div>
     <!-- Content -->
